bill更改