@@ -223,20 +223,21 @@ public class BillController {
 				+ userid + "'";
 		System.out.println(str + "++++++" + time + userid);
 		List<VBill> list = bdao.selectByPage(str, 1, 999999999);
-		
-		String strwhere = "createTime like '"+time+"%'"+" and userid="+userid;
-		String dayin = bdao.getDayIn(strwhere);
-		String dayout = bdao.getDayOut(strwhere);
+
+		String strwhere = "createTime like '" + time + "%'" + " and userid="
+				+ userid;
+		double dayin = bdao.getDayIn(strwhere);
+		double dayout = bdao.getDayOut(strwhere);
 		// 回传json字符串
 		response.setCharacterEncoding("utf-8");
 		response.setContentType("application/json");
 
-		System.out.println(dayin+","+dayout);
-		
+		System.out.println(dayin + "," + dayout);
+
 		LayuiData laydata = new LayuiData();
-		laydata.data=list;
-		laydata.result2 = dayin;
-		laydata.result = dayout;
+		laydata.data = list;
+		laydata.result2 = String.valueOf(dayin);
+		laydata.result = String.valueOf(dayout);
 		laydata.msg = "当天账单数";
 		Writer out;
 		try {
@@ -261,30 +262,31 @@ public class BillController {
 		response.setContentType("application/json");
 
 		double in = bdao.getBillInByTime(userid, time);
-		String out = bdao.getBillOutByTime(userid, time);
-		double sum=0;
-		System.out.println(sum+","+in+","+out);
-		if(in!=0&&out=="0.00"){
-			sum=Double.valueOf(in);
-		}else if (in==0&&out!="0.00") {
-			sum=0;
-		}else if(in!=0&&out!="0.00") {
-			Double dayin = new Double(in);
-			Double dayout = new Double(out);
-			sum = dayin-dayout;
-		}
+		double out = bdao.getBillOutByTime(userid, time);
+		double sum = 0;
+		sum = in - out;
+		System.out.println(sum + "," + in + "," + out);
+		// if (in != 0 && out == "0.00") {
+		// sum = Double.valueOf(in);
+		// } else if (in == 0 && out != "0.00") {
+		// sum = 0;
+		// } else if (in != 0 && out != "0.00") {
+		// Double dayin = new Double(in);
+		// Double dayout = new Double(out);
+		// sum = dayin - dayout;
+		// }
 		LayuiData laydata = new LayuiData();
 		if (sum >= 0) {
 			laydata.code = LayuiData.SUCCESS;
 			laydata.data = sum;
-			//laydata.result = in;
-			laydata.result2=out;
+			laydata.result = String.valueOf(in);
+			laydata.result2 = String.valueOf(out);
 			laydata.msg = "结余";
 		} else {
 			laydata.code = LayuiData.ERRR;
 			laydata.data = 0;
-			//laydata.result = in;
-			laydata.result2=out;
+			laydata.result = String.valueOf(in);
+			laydata.result2 = String.valueOf(out);
 			laydata.msg = "结余";
 		}
 		Writer ptintout;
@@ -373,6 +375,7 @@ public class BillController {
 		response.setContentType("application/json");
 
 		List<VBill> list = bdao.getBillByBillId(billid);
+		System.out.println(billid);
 		LayuiData laydata = new LayuiData();
 		laydata.code = LayuiData.SUCCESS;
 		laydata.data = list;
@@ -388,9 +391,10 @@ public class BillController {
 			e.printStackTrace();
 		}
 	}
-	@RequestMapping(value="dellbill")
+
+	@RequestMapping(value = "dellbill")
 	public void DellBill(int billid, HttpServletRequest request,
-			HttpServletResponse response, Model model){
+			HttpServletResponse response, Model model) {
 		BillDaoImpl bdao = new BillDaoImpl();
 
 		// 回传json字符串
@@ -398,12 +402,12 @@ public class BillController {
 		response.setContentType("application/json");
 		boolean result = bdao.delBill(billid);
 		LayuiData laydata = new LayuiData();
-		if(result){
-			laydata.code=LayuiData.SUCCESS;
-			laydata.msg="删除成功";
-		}else{
-			laydata.code=LayuiData.ERRR;
-			laydata.msg="删除失败";
+		if (result) {
+			laydata.code = LayuiData.SUCCESS;
+			laydata.msg = "删除成功";
+		} else {
+			laydata.code = LayuiData.ERRR;
+			laydata.msg = "删除失败";
 		}
 		Writer ptintout;
 		try {
